Adds first implementation and tests for topN with sorted input